# ZuruTech_Test

./: LICENSE  README.md  pyproject.toml  structure.json
pyls/: main.py  pythontest.py
