[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyls"
version = "1.0.0"
description = "A Python implementation of the ls utility for listing directory contents."
authors = [
    {name = "Nicola", email = "nickrava.ra@gmail.com"}
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ls", "command-line", "utility"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = []

[project.scripts]
pyls = "pyls.main:main"
